--- a/style.css
+++ b/style.css
@@ -1,16 +1,87 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");
 
+body {
+  font-family: "Roboto", sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: rgb(246, 241, 235);
+}
+
 .fa-square {
   color: rgb(230, 15, 15);
+  font-size: 1rem;
 }
 
 #brand {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
+  font-weight: 900;
   font-size: 2rem;
-  margin: 5px;
+}
+#designation {
+  color: rgb(131, 122, 122);
+  font-weight: 500;
 }
 
 .nav-item {
   margin: 0 10%;
+}
+.intro {
+  margin-top: 2%;
+}
+
+.intro-left {
+  background-color: rgb(159, 159, 199);
+}
+#name {
+  color: white;
+  font-weight: 600;
+}
+#work{
+  color: white;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 2;
+}
+hr{
+  /* width: 50%;
+  height: 30px;
+  margin-left:0;
+  color: red; */
+  /* margin: 0 auto; */
+  align-items: center;
+}
+
+.intro-right{
+  background-color: rgba(255, 255, 255, 0.781);
+  /* border-left: 1px solid black; */
+}
+
+.display-pic {
+  width: 180px;
+  /* padding: 5% 0; */
+  margin: 6% 0 5% ;
+}
+
+.connect-links {
+  background-color: white;
+  padding: 3% 0 0 0;
+  
+}
+
+.fab{
+  color: rgb(44, 43, 43);
+  margin: 2%;
+  font-size: 1.5rem;
+}
+.fab:hover {
+  color: black;
+  margin: 2%;
+  font-size: 1.5rem;
+}
+.fa-instagram{
+  font-weight: 900;
+}
+/* 
+
+
+.container-fluid {
+  background-color: rgb(239, 241, 241);
 }
