--- a/style.css
+++ b/style.css
@@ -16,31 +16,38 @@ body {
   font-size: 2rem;
 }
 #designation {
-  color: rgb(131, 122, 122);
+  color: rgb(168, 158, 158);
   font-weight: 500;
 }
 
 .nav-item {
   margin: 0 10%;
+  font-weight: 500;
+  color: red;
 }
+
+.nav-link:hover {
+  /* background-color: rgb(184, 180, 180); */
+}
+
 .intro {
   margin-top: 2%;
 }
 
-.intro-left {
+.brief-intro {
   background-color: rgb(159, 159, 199);
 }
 #name {
   color: white;
   font-weight: 600;
 }
-#work{
+#work {
   color: white;
   font-weight: 500;
   font-size: 1.2rem;
   line-height: 2;
 }
-hr{
+hr {
   /* width: 50%;
   height: 30px;
   margin-left:0;
@@ -49,24 +56,37 @@ hr{
   align-items: center;
 }
 
-.intro-right{
+.intro-right {
   background-color: rgba(255, 255, 255, 0.781);
   /* border-left: 1px solid black; */
+}
+#greet {
+  padding-top: 10%;
+  font-size: 3rem;
+  font-weight: 700;
+}
+.intro-right > p {
+  font-size: 1.2rem;
+  text-align: justify;
+  margin-top: 5%;
+  padding: 0 3%;
+}
+#titles {
+  color: rgb(221, 62, 62);
 }
 
 .display-pic {
   width: 180px;
   /* padding: 5% 0; */
-  margin: 6% 0 5% ;
+  margin: 6% 0 5%;
 }
 
 .connect-links {
   background-color: white;
   padding: 3% 0 0 0;
-  
 }
 
-.fab{
+.fab {
   color: rgb(44, 43, 43);
   margin: 2%;
   font-size: 1.5rem;
@@ -76,12 +96,18 @@ hr{
   margin: 2%;
   font-size: 1.5rem;
 }
-.fa-instagram{
+.fa-instagram {
   font-weight: 900;
 }
-/* 
 
+.btn-default {
+  background-color: rgb(120, 120, 192);
 
-.container-fluid {
-  background-color: rgb(239, 241, 241);
+  color: #fff;
+  margin-bottom: 3%;
+}
+
+.btn-default:hover {
+  background-color: rgb(96, 96, 199);
+  color: #fff;
 }
