--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .nav-link:hover {
-  /* background-color: rgb(184, 180, 180); */
+  background-color: rgba(184, 180, 180, 0.466);
 }
 
 .intro {
@@ -40,12 +40,16 @@ body {
 #name {
   color: white;
   font-weight: 600;
+
+  padding: 2%;
 }
 #work {
   color: white;
   font-weight: 500;
   font-size: 1.2rem;
   line-height: 2;
+
+  padding: 2%;
 }
 hr {
   /* width: 50%;
@@ -54,6 +58,9 @@ hr {
   color: red; */
   /* margin: 0 auto; */
   align-items: center;
+}
+.intro-left {
+  /* position: relative; */
 }
 
 .intro-right {
@@ -78,12 +85,13 @@ hr {
 .display-pic {
   width: 180px;
   /* padding: 5% 0; */
-  margin: 6% 0 5%;
+  margin: 8% 0 6%;
 }
 
 .connect-links {
   background-color: white;
-  padding: 3% 0 0 0;
+  padding: 2% 0;
+  height: inherit;
 }
 
 .fab {
@@ -110,4 +118,25 @@ hr {
 .btn-default:hover {
   background-color: rgb(96, 96, 199);
   color: #fff;
+}
+
+.footer {
+  background-color: black;
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+}
+
+.name-break {
+  display: inline;
+}
+@media only screen and (min-width: 1200px) {
+  .name-break {
+    display: none;
+  }
+}
+
+footer {
+  text-align: center;
+  margin-top: 35px;
 }
