--- a/style.css
+++ b/style.css
@@ -157,3 +157,49 @@ footer {
   background-color: grey;
   margin-bottom: 0;
 }
+
+/* About Page  */
+.cv-btn {
+  margin: 25px;
+  font-weight: 500;
+}
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  background-color: rgba(159, 159, 199, 0.294);
+  padding: 25px;
+}
+.info {
+  box-sizing: border-box;
+  background-color: aliceblue;
+  width: 700px;
+  height: 300px;
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* box-shadow: 0 5px 15px 5px rgb(192, 190, 190); */
+  padding: 25px;
+}
+
+.date h4 {
+  color: blue;
+  font-weight: bold;
+}
+
+.job-desc {
+  /* display: flex; */
+}
+.job-desc h3 {
+  color: black;
+  font-weight: lighter;
+  font-size: 1.2rem;
+}
+
+.date {
+  align-self: flex-start;
+}
